# libswiftnav-legacy

./: .gitignore  .travis.yml  CMakeLists.txt  DEVELOPMENT.md  DEVELOPMENT.rst  README.md  setup.py
CBLAS/: CMakeLists.txt
CBLAS/include/: cblas_f77.h
CBLAS/src/: CMakeLists.txt
checks/: allowed_doxygen_warnings.txt  checkoutput.sh  pre-commit  run-coverage.sh  setup-hooks.sh  uncrustify.cfg
clapack-3.2.1-CMAKE/: CMakeLists.txt  CMakeLists.txt.orig
clapack-3.2.1-CMAKE/BLAS/: CMakeLists.txt
clapack-3.2.1-CMAKE/BLAS/SRC/: CMakeLists.txt  xerbla.c
clapack-3.2.1-CMAKE/BLAS/TESTING/: CMakeLists.txt
clapack-3.2.1-CMAKE/F2CLIBS/libf2c/: CMakeLists.txt  arith_cortex-a9.h  arith_cortex-m4.h  endfile.c  f2c.h  fio.h  fmt.c  signal_.c
clapack-3.2.1-CMAKE/INCLUDE/: blaswrap.h  clapack.h  f2c.h
clapack-3.2.1-CMAKE/SRC/: CMakeLists.txt  cgbtrf.c  cgehrd.c  chseqr.c  cpbtrf.c  cunmlq.c  cunmql.c  cunmqr.c  cunmrq.c  cunmrz.c  dgbtrf.c  dgehrd.c  dhseqr.c  dlaruv.c  dormlq.c  dormql.c  dormqr.c  dormrq.c  dormrz.c  dpbtrf.c  sgbtrf.c  sgehrd.c  shseqr.c  slaruv.c  sormlq.c  sormql.c  sormqr.c  sormrq.c  sormrz.c  spbtrf.c  zgbtrf.c  zgehrd.c  zhseqr.c  zpbtrf.c  zunmlq.c  zunmql.c  zunmqr.c  zunmrq.c  zunmrz.c
clapack-3.2.1-CMAKE/TESTING/: CMakeLists.txt
cmake/: AddCompilerFlag.cmake  FindSSE.cmake  OptimizeForArchitecture.cmake  Toolchain-gcc-arm-embedded.cmake
docs/: CMakeLists.txt  Doxyfile.in  Makefile  conf.py  index.rst  install.dox  main.dox
docs/_templates/: page.html
docs/diagrams/: 1st_order_loop_filter.tex  2nd_order_dpll.tex  CMakeLists.txt
include/: almanac.h  bits.h  common.h  coord_system.h  correlate.h  ephemeris.h  gpstime.h  linear_algebra.h  nav_msg.h  prns.h  pvt.h  rtcm3.h  sbp.h  track.h  tropo.h
lapacke/: CMakeLists.txt  Makefile  make.inc
lapacke/include/: lapacke.h  lapacke_config.h
lapacke/src/: Makefile  lapacke_cbdsqr.c  lapacke_cbdsqr_work.c  lapacke_cgbbrd.c  lapacke_cgbbrd_work.c  lapacke_cgbcon.c  lapacke_cgbcon_work.c  lapacke_cgbequ.c  lapacke_cgbequ_work.c  lapacke_cgbequb.c  lapacke_cgbequb_work.c  lapacke_cgbrfs.c  lapacke_cgbrfs_work.c  lapacke_cgbrfsx.c  lapacke_cgbrfsx_work.c  lapacke_cgbsv.c  lapacke_cgbsv_work.c  lapacke_cgbsvx.c  lapacke_cgbsvx_work.c  lapacke_cgbsvxx.c  lapacke_cgbsvxx_work.c  lapacke_cgbtrf.c  lapacke_cgbtrf_work.c  lapacke_cgbtrs.c  lapacke_cgbtrs_work.c  lapacke_cgebak.c  lapacke_cgebak_work.c  lapacke_cgebal.c  lapacke_cgebal_work.c  lapacke_cgebrd.c  lapacke_cgebrd_work.c  lapacke_cgecon.c  lapacke_cgecon_work.c  lapacke_cgeequ.c  lapacke_cgeequ_work.c  lapacke_cgeequb.c  lapacke_cgeequb_work.c  lapacke_cgees.c  lapacke_cgees_work.c  lapacke_cgeesx.c  (+1677 more)
lapacke/testing/: Makefile
lapacke/testing/include/: test_utils.h
lapacke/testing/interface/: Makefile  cbdsqr_1.c  cbdsqr_2.c  cgbbrd_1.c  cgbcon_1.c  cgbrfs_1.c  cgbtrf_1.c  cgbtrs_1.c  cgebak_1.c  cgebal_1.c  cgebrd_1.c  cgebrd_3.c  cgebrd_4.c  cgebrd_5.c  cgecon_1.c  cgehrd_1.c  cgehrd_2.c  cgehrd_3.c  cgelqf_1.c  cgelqf_3.c  cgeqpf_1.c  cgeqrf_1.c  cgeqrf_3.c  cgerfs_1.c  cgetrf_1.c  cgetri_1.c  cgetrs_1.c  chbtrd_1.c  checon_1.c  chegst_1.c  cherfs_1.c  chetrd_1.c  chetrd_2.c  chetrd_3.c  chetrf_1.c  chetri_1.c  chetrs_1.c  chpcon_1.c  chpgst_1.c  chprfs_1.c  (+423 more)
lapacke/testing/utils/: Makefile  compare_complex_doubles.c  compare_complex_floats.c  compare_doubles.c  compare_floats.c
libfec/: CMakeLists.txt
libfec/src/: CMakeLists.txt  fec.c  viterbi27.c
plover/: AmbKF.hs  AmbiguityTest.hs  CMakeLists.txt  Main.hs  PVT.hs  README  Utils.hs  extern_defs.c  extern_defs.h  externs.plv  generated.c  generated.h  libswiftnav-generate.cabal  prelude.plv  pvt.plv  qr.plv  swiftnav-plover.cabal  wrappers.c  wrappers.h
python/: .gitignore  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini  version.py
sbp_generate/: generate.py  message_descs.tex  messages_table.tex  sbp.yaml  sbp_base.tex  sbp_decode_template.py  sbp_messages.py  sbp_messages_template.h  sbp_messages_template.py  swiftnav.sty  swiftnav_tikz.sty
scripts/: gitversion
src/: CMakeLists.txt  almanac.c  amb_kf.c  ambiguity_test.c  baseline.c  bit_sync.c  bits.c  cn0_est_bl.c  cn0_est_snv.c  cnav_msg.c  coord_system.c  correlate.c  dgnss_management.c  edc.c  ephemeris.c  filter_bw2.c  filter_lp1.c  filter_management.c  filter_utils.c  float_kf.c  gpstime.c  ionosphere.c  iterator.c  iterator_utils.c  l2c_capability.c  lambda.c  linear_algebra.c  logging.c  memory_pool.c  nav_msg.c  nav_msg_glo.c  observation.c  printing_utils.c  prns.c  pvt.c  rtcm3.c  sats_management.c  sbp.c  sbp_utils.c  set.c  (+7 more)
src/counter_checker/: Makefile  counter_checker.c
src/plover/: amb_kf.c  amb_kf_plover.c  ambiguity_test.c  externs.c  generated.c  prelude.c  pvt.c  qr.c
swiftnav/: almanac.pyx  amb_kf.pyx  amb_kf_c.pxd  ambiguity_test.pyx  ambiguity_test_c.pxd  baseline_c.pxd  common.pxd  constants_c.pxd  lam.pyx  (+28 more)
tests/: CMakeLists.txt  check_almanac.c  check_amb_kf.c  check_ambiguity_test.c  check_baseline.c  check_bits.c  check_cn0_estimator.c  check_cn0_filters.c  check_cnav.c  check_coord_system.c  check_correlator.c  check_counter_checker.c  check_decode_l2c_capability.c  check_dgnss_management.c  check_edc.c  check_ephemeris.c  check_filter_utils.c  check_float_kf.c  check_glo_decoder.c  check_gpstime.c  check_ionosphere.c  check_l2c_meas_data.c  check_linear_algebra.c  check_main.c  check_memory_pool.c  check_observation.c  check_plover.c  check_prns.c  check_pvt.c  check_qr.c  check_rtcm3.c  check_sats_management.c  check_sbp.c  check_set.c  check_signal.c  check_single_diff.c  check_suites.h  check_time.c  check_track.c  check_troposphere.c  (+3 more)
tests/data/gloframesstream/: raw_glo_frame_ascii.info  read.me
tests/data/l2cbitstream/: Makefile  l2cbitstream.workspace
tests/data/l2cbitstream/l2cbitstream_test/: l2cbitstream_test.mk  l2cbitstream_test.project  main.c
tests/data/l2cbitstream/libl2cbitstream/: CMakeLists.txt  l2cbitstream.c  l2cbitstream.h  libl2cbitstream.mk  libl2cbitstream.project  libl2cbitstreamwrapper.py
tests/scripts/: v27_enc.py
(+194 files in other folders)
